latex to html rendering

--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -17,6 +17,9 @@
             background-color: #666;
         }
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
+
 </head>
 <body>
     <div id="container">
@@ -28,6 +31,10 @@
         <canvas id="canvas">
 
         </canvas>
+    </div>
+
+    <div id="latex">
+
     </div>
     <script src="../static/js/video.js"></script>
 </body>
